@startuml
skinparam classAttributeIconSize 0


class POTApplication {
  +static getInstance()
  +getCurrentSession()
}

class UserSession {
  +getUserEmail()
}

class OrganizationsRecord{
    +Organization getOrganizationByUserEmail(String email)
    +calcMeanPayment(mapOrgPayment)
    +calcDeviationPayment(mapOrgPayment,mapMeanPayments)
    +calcMeanDelay(mapOrgDelay)
    +calcDeviationDelay(mapOrgDelay,mapMeanDelays)
}

class Organization {
    +determinatePayOrg(mapOrgPayment)
    +determinateDelayOrg(mapOrgDelay)
}

class PaymentTransactionList{
    +getPaymentTransactions()
}


class PaymentTransaction {
    -String id
    -Date endDate
    -Double delay
    -String workQualityDescription
    +getM_oFreelancer()
    +getM_oTask()
    +generatePayAmount(task,free)
}

class Freelancer {
    -String id
    -String name
    -String expertiseLevel
    -String email
    -String NIF
    -String IBAN
    -String address
    -String country
    +getId()
}

class Platform {
  -String designacao
  +OrganizationsRecord getOrganizationsRecord()
  +FreelancersRecord getFreelancersRecord()
}

class AnalyzeFreelancerStatisticsController {
    +getOrganization()
    +determinatePayOrg()
    +calcMeanPayment()
    +calcDeviationPayment()
    +determinateDelayOrg()
    +calcMeanDelay()
    +calcDeviationDelay()
}

class AnalyzeFreelancerStatisticsUI {
}

class Task {
  -String id
  -String briefDescription
  -Integer timeDuration
  -Double costPerHour
  -String taskCategory
}

AnalyzeFreelancerStatisticsUI ..> AnalyzeFreelancerStatisticsController 

AnalyzeFreelancerStatisticsController ..> Platform
AnalyzeFreelancerStatisticsController ..> OrganizationsRecord
AnalyzeFreelancerStatisticsController ..> POTApplication
AnalyzeFreelancerStatisticsController ..> UserSession
AnalyzeFreelancerStatisticsController ..> Organization


Platform "1" -> "1" OrganizationsRecord : has >

OrganizationsRecord "1" -> "*" Organization : has >

Organization "1" -- "1" PaymentTransactionList : has >

PaymentTransactionList "1" -- "*" PaymentTransaction : has registries of >

PaymentTransaction "1" --> "1" Freelancer : relates to
PaymentTransaction "1" --> "1" Task : relates to

Task "1..*" --> "1" Freelancer : is assigned to


@enduml



